[tool.poetry]
name = "metadamage"
version = "0.0.0"
description = "Metagenomics Ancient Damage: metadamage"
authors = ["Christian Michelsen <christianmichelsen@gmail.com>"]
license = "MIT"
keywords = ['metadamage', 'metagenomics', 'ancient damage', 'DNA damage']
repository = "https://github.com/ChristianMichelsen/metadamage"
readme = "README.md"
include = ["metadamage/style.mplstyle", 'pyproject.toml']


[tool.poetry.dependencies]
python = "^3.8"
pip = "^20.3.3"
numpyro = "^0.4.1"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
dask = {extras = ["distributed"], version = "^2020.12.0"}
fsspec = "^0.8.5"
dill = "^0.3.3"
PyPDF2 = "^1.26.0"
joblib = "^1.0.0"
pyarrow = "^2.0.0"
rich = "^9.8.1"
typer = {extras = ["all"], version = "^0.3.2"}
click-help-colors = "^0.9"
tqdm = "^4.56.0"
poetry-dynamic-versioning = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.8.4"
ipykernel = "^5.4.3"
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"
pytest-cov = "^2.11.0"

[tool.poetry.scripts]
metadamage = "metadamage.cli:main_cli"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''